# nvdla_riscv

./: .gitignore  README.md  build.sh  convert-ipdv.py  convert.py  coremark_lcc.sh
inc/riscv/: htif.h  mtrap.h
nvdla/firmware/: cache.c  common.c  dla_engine_internal.h  engine.c  engine_data.c  engine_debug.c  engine_isr.c  rubik.c  scheduler.c
nvdla/firmware/include/: dla_debug.h  dla_sched.h  opendla.h
nvdla/include/: nvdla_interface.h
nvdla/port/riscv/: nvdla_core_callbacks.c
nvdla/port/riscv/include/: nvdla_riscv.h
src/: CMakeLists.txt  helpers.S  interrupt.c  link.lcc.ld  main.c  nvdla.ld  riscv_runtime.c  startup.S
src/arch/riscv/: csr.c  csr_mmio.c  trap.c
src/drivers/: htif.c
src/env/ariane/: crt.S  default.ld  default_qemu.ld  setup.c
src/env/common/: constants.S  crtm.S
src/include/: debug.h  femto.h
src/include/arch/riscv/: atomic.h  csr.h  csr_mmio.h  machine.h  trap.h
src/port/: std_syscall.c
src/riscv/: main.c  runtime.c
src/test/: csr_test.c  csr_test.h  dla_test.c  dla_test.h  test.c  test.h  test_util.c  test_util.h
src/test/dla/: bdma_test.c  conv_test.c  reg_test.c  task_test.c
src/test/fpga/: cvsram_test.c  task_test.c
src/test/ipdv_sim/: dla_bdma_test.c  dla_conv_test.c  dla_reg_test.c  dla_test_util.c
src/test/riscv/: csr_test.c  cvsram_test.c  fence_test.c  irq_test.c  mem_test.c
src/test/riscv_sim/: csr_test.h
